Moved from jpackage to GraalVM for distribution
This unfortunately means that we have to stick with JDK 11 until they decide to make versions based on more recent JDKs. Code has been adapted accordingly.